--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.16",
     "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
