--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.16",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.2"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js"
   },
